<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_shopping"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_shopping"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/summary"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_shopping_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintTop_toBottomOf="@+id/text_shopping" />

            <View
                android:id="@+id/v_product_line1"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_margin="8dp"
                android:background="@drawable/ic_line"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintTop_toBottomOf="@+id/recycler_shopping_list" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_delivery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/delivery"
                android:textColor="@color/colorGrayDark"
                app:layout_constraintEnd_toStartOf="@+id/tv_total_real_value"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintTop_toBottomOf="@+id/v_product_line1" />

            <View
                android:id="@+id/v_product_line2"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_margin="8dp"
                android:background="@drawable/ic_line"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintTop_toBottomOf="@+id/tv_delivery" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="right"
                android:text="@string/total_price"
                android:textColor="@color/colorGrayDark"
                app:layout_constraintEnd_toStartOf="@+id/tv_total_price_value"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintTop_toBottomOf="@+id/v_product_line2" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_total_price_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="right"
                android:textColor="@color/colorGrayDark"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintTop_toBottomOf="@+id/v_product_line2" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_total_discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/discount_price"
                android:textColor="@color/colorGrayDark"
                app:layout_constraintEnd_toStartOf="@+id/tv_total_discount_value"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintTop_toBottomOf="@+id/tv_total_price" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_total_discount_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintTop_toBottomOf="@+id/tv_total_price" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_total_real"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/real_price"
                android:textColor="@color/colorGrayDark"
                app:layout_constraintEnd_toStartOf="@+id/tv_total_real_value"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintTop_toBottomOf="@+id/tv_total_discount" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_total_real_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/colorOrange"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintTop_toBottomOf="@+id/tv_total_discount" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="30dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="30dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_shopping"
        style="@style/appButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />
</androidx.constraintlayout.widget.ConstraintLayout>