<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_product_detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorGrayDark"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_product_detail_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorGrayDark"
        android:text="@string/product_description"
        android:textSize="13dp"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tv_product_detail_title" />

    <RatingBar
        android:id="@+id/rb_product_detail"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:isIndicator="true"
        android:numStars="5"
        android:progressTint="@color/colorYellow"
        android:rating="5"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/tv_product_detail_description" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_product_detail_image"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_margin="15dp"
        android:foregroundGravity="center"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/rb_product_detail" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_product_detail_last_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="@color/colorGrayDark"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/iv_product_detail_image"
        tools:ignore="MissingConstraints" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_product_detail_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/colorOrange"
        android:textStyle="bold"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/tv_product_detail_last_price" />

    <!-- Quantity -->
       <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/sp_quantity2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border_button"
        android:hint="@string/quantity"
        android:padding="10dp"
        android:textSize="13dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/tv_product_detail_last_price" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_discount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/discount_border_button"
        android:textColor="@color/colorAccent"
        android:textSize="10dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/tv_product_detail_price" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_add_to_shopping_list"
        style="@style/appButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_to_shopping_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />

</androidx.constraintlayout.widget.ConstraintLayout>